--- a/app/src/main/res/layout/activity_module2_courses.xml
+++ b/app/src/main/res/layout/activity_module2_courses.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/medicationTechnique"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:text="@string/medication_technique"
+                tools:text="medication_technique"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:clickable="true"
@@ -40,7 +40,7 @@
                 android:id="@+id/medicationSafety"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:text="@string/medication_safety"
+                tools:text="medication_safety"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:clickable="true"
