--- a/app/src/main/res/layout/account_creation.xml
+++ b/app/src/main/res/layout/account_creation.xml
@@ -31,8 +31,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/gopher_logo"
-                />
+                app:srcCompat="@drawable/gopher_logo" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -62,8 +61,8 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:gravity="center"
+            android:orientation="vertical"
             android:padding="16dp"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="46dp">
@@ -79,105 +78,138 @@
                 app:srcCompat="@drawable/agedcare_icon"
                 tools:layout_editor_absoluteY="16dp" />
 
-            <EditText
-                android:id="@+id/Fullname"
-                style="@style/Widget.AppCompat.EditText"
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:paddingHorizontal="16dp"
-                android:layout_marginBottom="12dp"
-                android:layout_gravity="center_horizontal"
-                android:autofillHints=""
-                android:background="@drawable/edit_text_border"
-                android:ems="10"
-                android:focusable="auto"
-                android:hint="@string/full_name"
-                android:inputType="textPersonName"
-                android:textColor="@android:color/darker_gray"
-                tools:layout_editor_absoluteX="37dp"
-                tools:layout_editor_absoluteY="124dp" />
-
-            <EditText
-                android:id="@+id/Username"
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:paddingHorizontal="16dp"
-                android:layout_marginBottom="12dp"
-                android:layout_gravity="center_horizontal"
-                android:autofillHints=""
-                android:background="@drawable/edit_text_border"
-                android:ems="10"
-                android:focusable="auto"
-                android:hint="@string/username_unique"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/darker_gray"
-                android:textStyle="normal"
-                tools:layout_editor_absoluteX="35dp"
-                tools:layout_editor_absoluteY="172dp" />
-
-            <EditText
-                android:id="@+id/Email"
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:paddingHorizontal="16dp"
-                android:layout_marginBottom="12dp"
-                android:layout_gravity="center_horizontal"
-                android:autofillHints=""
-                android:background="@drawable/edit_text_border"
-                android:ems="10"
-                android:focusable="auto"
-                android:hint="@string/email_address_unique"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/darker_gray"
-                android:textStyle="normal"
-                tools:layout_editor_absoluteX="36dp"
-                tools:layout_editor_absoluteY="217dp" />
-        <com.google.android.material.textfield.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                app:passwordToggleEnabled="true">
+                app:expandedHintEnabled="false"
+                app:placeholderText="Jane Doe">
 
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:layout_marginBottom="12dp"
-                android:layout_gravity="center_horizontal"
-                android:autofillHints=""
-                android:background="@drawable/edit_text_border"
-                android:ems="10"
-                android:focusable="auto"
-                android:hint="@string/password"
-                android:inputType="textPassword"
-                android:textColor="@android:color/darker_gray"
-                android:textStyle="normal"
-                tools:layout_editor_absoluteX="36dp"
-                tools:layout_editor_absoluteY="265dp" />
-
-</com.google.android.material.textfield.TextInputLayout>
+                <EditText
+                    android:id="@+id/Fullname"
+                    style="@style/Widget.AppCompat.EditText"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="12dp"
+                    android:autofillHints=""
+                    android:background="@drawable/edit_text_border"
+                    android:ems="10"
+                    android:focusable="auto"
+                    android:hint="@string/full_name"
+                    android:inputType="textPersonName"
+                    android:paddingHorizontal="16dp"
+                    tools:layout_editor_absoluteX="37dp"
+                    tools:layout_editor_absoluteY="124dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                app:passwordToggleEnabled="true">
-            <EditText
-                android:id="@+id/passwordConfirm"
+                app:expandedHintEnabled="false"
+                app:placeholderText="Jane.Doe@goherindustries.com">
+
+                <EditText
+                    android:id="@+id/Email"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="12dp"
+                    android:autofillHints=""
+                    android:background="@drawable/edit_text_border"
+                    android:ems="10"
+                    android:focusable="auto"
+                    android:hint="@string/email_address_unique"
+                    android:inputType="textEmailAddress"
+                    android:paddingHorizontal="16dp"
+                    android:textStyle="normal"
+                    tools:layout_editor_absoluteX="36dp"
+                    tools:layout_editor_absoluteY="217dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:layout_marginBottom="12dp"
-                android:layout_gravity="center_horizontal"
-                android:autofillHints=""
-                android:background="@drawable/edit_text_border"
-                android:ems="10"
-                android:focusable="auto"
-                android:hint="@string/confirm_password"
-                android:inputType="textPassword"
-                android:textColor="@android:color/darker_gray"
-                android:textStyle="normal"
-                tools:layout_editor_absoluteX="36dp"
-                tools:layout_editor_absoluteY="313dp" />
+                android:layout_height="wrap_content"
+                app:expandedHintEnabled="false"
+                app:passwordToggleEnabled="true"
+                app:placeholderText="************">
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="12dp"
+                    android:autofillHints=""
+                    android:background="@drawable/edit_text_border"
+                    android:ems="10"
+                    android:focusable="auto"
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:textStyle="normal"
+                    tools:layout_editor_absoluteX="36dp"
+                    tools:layout_editor_absoluteY="265dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                app:expandedHintEnabled="false"
+                app:passwordToggleEnabled="true"
+                app:placeholderText="************">
+
+                <EditText
+                    android:id="@+id/passwordConfirm"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="12dp"
+                    android:autofillHints=""
+                    android:background="@drawable/edit_text_border"
+                    android:ems="10"
+                    android:focusable="auto"
+                    android:hint="@string/confirm_password"
+                    android:inputType="textPassword"
+                    android:textStyle="normal"
+                    tools:layout_editor_absoluteX="36dp"
+                    tools:layout_editor_absoluteY="313dp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/register_role_selection_prompt"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+            <com.google.android.material.button.MaterialButtonToggleGroup
+                android:id="@+id/role_toggle_group"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:gravity="center"
+                app:singleSelection="true">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_caretaker"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/caretaker_role_name" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_nurse"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nurse_role_name" />
+
+            </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
             <Button
