nurse api implementation and fix errors

--- a/app/src/main/res/layout/account_creation.xml
+++ b/app/src/main/res/layout/account_creation.xml
@@ -95,7 +95,7 @@
                     android:background="@drawable/edit_text_border"
                     android:ems="10"
                     android:focusable="auto"
-                    android:hint="@string/full_name"
+                    android:hint=""
                     android:inputType="textPersonName"
                     android:paddingHorizontal="16dp"
                     tools:layout_editor_absoluteX="37dp"
@@ -118,7 +118,7 @@
                     android:background="@drawable/edit_text_border"
                     android:ems="10"
                     android:focusable="auto"
-                    android:hint="@string/email_address_unique"
+                    android:hint=""
                     android:inputType="textEmailAddress"
                     android:paddingHorizontal="16dp"
                     android:textStyle="normal"
@@ -143,7 +143,7 @@
                     android:background="@drawable/edit_text_border"
                     android:ems="10"
                     android:focusable="auto"
-                    android:hint="@string/password"
+                    android:hint=""
                     android:inputType="textPassword"
                     android:textStyle="normal"
                     tools:layout_editor_absoluteX="36dp"
