--- a/app/src/main/res/layout/activity_module1_courses.xml
+++ b/app/src/main/res/layout/activity_module1_courses.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/homecareInduction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/homecare_induction"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:clickable="true"
@@ -41,7 +41,7 @@
                 android:id="@+id/infectionControl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/infection_control"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:clickable="true"
@@ -54,7 +54,7 @@
                 android:id="@+id/supportingMealtimes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/supporting_mealtimes"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:clickable="true"
