--- a/app/src/main/res/layout/activity_module3_courses.xml
+++ b/app/src/main/res/layout/activity_module3_courses.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/emotionalIntelligenceCommunication"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/emotional_intelligence_communication"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:clickable="true"
