--- a/app/src/main/res/layout/loading_splash.xml
+++ b/app/src/main/res/layout/loading_splash.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/floating"
                 android:layout_width="187dp"
                 android:layout_height="164dp"
-                android:contentDescription="@string/gopher_heart"
+                android:contentDescription=""
                 app:srcCompat="@drawable/heart_gopher"
                 tools:layout_editor_absoluteX="102dp"
                 tools:layout_editor_absoluteY="32dp"
@@ -70,7 +70,7 @@
                 android:layout_width="64dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="188dp"
-                android:contentDescription="@string/splash"
+                android:contentDescription=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
