--- a/app/src/main/res/layout/login_enter_pin.xml
+++ b/app/src/main/res/layout/login_enter_pin.xml
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
-                android:text="@string/enter_pin_code"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -84,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="@string/please_check_your_email_for_the_code"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -175,7 +175,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="@string/this_code_is_valid_for_the_next_30_seconds_a_new_code_will_be_generated_when_it_expires"
+                android:text=""
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="12sp"
@@ -205,7 +205,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="@string/resend"
+                android:text=""
                 android:textColor="@color/TG_blue"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
