--- a/app/src/main/res/layout/activity_emotional_intelligence_communication.xml
+++ b/app/src/main/res/layout/activity_emotional_intelligence_communication.xml
@@ -9,7 +9,7 @@
         android:id="@+id/emotional_intelligence_communication_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/emotional_intelligence_communication"
+        android:text=""
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_gravity="center"
@@ -19,7 +19,7 @@
         android:id="@+id/emotional_intelligence_communication_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/emotional_intelligence_communication_description"
+        android:text=""
         android:textSize="16sp"
         android:layout_gravity="center" />
 
@@ -27,7 +27,7 @@
         android:id="@+id/start_emotional_intelligence_communication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start_button_text"
+        android:text=""
         android:layout_gravity="center"
         android:layout_marginTop="32dp" />
 
