--- a/app/src/main/res/layout/activity_homecare_induction.xml
+++ b/app/src/main/res/layout/activity_homecare_induction.xml
@@ -9,7 +9,7 @@
         android:id="@+id/homecare_induction_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/homecare_induction"
+        android:text=""
         android:textSize="24sp"
         android:textStyle="bold"
         android:layout_gravity="center"
@@ -19,7 +19,7 @@
         android:id="@+id/homecare_induction_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/homecare_induction_description"
+        android:text=""
         android:textSize="16sp"
         android:layout_gravity="center" />
 
@@ -27,7 +27,7 @@
         android:id="@+id/start_homecare_induction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start_button_text"
+        android:text=""
         android:layout_gravity="center"
         android:layout_marginTop="32dp" />
 
