--- a/app/src/main/res/layout/activity_training.xml
+++ b/app/src/main/res/layout/activity_training.xml
@@ -14,7 +14,7 @@
         android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/welcome_to_training"
+        android:text=""
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,7 +27,7 @@
         android:id="@+id/module1Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/module_1"
+        android:text=""
         android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintTop_toBottomOf="@id/welcomeText"
@@ -41,7 +41,7 @@
         android:id="@+id/module2Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/module_2"
+        android:text=""
         android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintTop_toBottomOf="@id/module1Button"
@@ -55,7 +55,7 @@
         android:id="@+id/module3Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/module_3"
+        android:text=""
         android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintTop_toBottomOf="@id/module2Button"
