--- a/app/src/main/res/layout/create_new_password.xml
+++ b/app/src/main/res/layout/create_new_password.xml
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
                 android:paddingVertical="64dp"
-                android:text="@string/create_new_password"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
                 android:layout_width="284dp"
                 android:layout_height="33dp"
                 android:layout_marginTop="12dp"
-                android:text="@string/create_your_new_password"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -109,7 +109,7 @@
                     android:background="@drawable/edit_text_border"
                     android:ems="10"
                     android:focusable="auto"
-                    android:hint="@string/hidden_password"
+                    android:hint=""
                     android:inputType="textPassword"
                     android:textColor="@android:color/darker_gray"
                     android:textStyle="normal"
@@ -125,7 +125,7 @@
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:focusable="auto"
-                android:hint="@string/hidden_password"
+                android:hint=""
                 android:inputType="textPassword"
                 android:textColor="@android:color/darker_gray"
                 android:textStyle="normal"
@@ -139,7 +139,7 @@
                 android:layout_height="50dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="@string/text_continue"
+                android:text=""
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:cornerRadius="24dp"
