--- a/app/src/main/res/layout/forgot_the_password.xml
+++ b/app/src/main/res/layout/forgot_the_password.xml
@@ -61,7 +61,7 @@
                 android:background="@drawable/edit_text_border"
                 android:ems="10"
                 android:focusable="auto"
-                android:hint="@string/email_address"
+                android:hint=""
                 android:inputType="textEmailAddress"
                 android:paddingHorizontal="16dp"
                 android:textColor="@android:color/darker_gray"
@@ -76,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
-                android:text="@string/forgot_the_password"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -91,7 +91,7 @@
                 android:layout_width="284dp"
                 android:layout_height="33dp"
                 android:layout_marginTop="12dp"
-                android:text="@string/enter_email_address_for_reset"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +115,7 @@
                 android:layout_height="60dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
-                android:text="@string/text_continue"
+                android:text=""
                 android:textColor="@color/white"
                 app:cornerRadius="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
