--- a/app/src/main/res/layout/loading_log_in.xml
+++ b/app/src/main/res/layout/loading_log_in.xml
@@ -34,6 +34,7 @@
                 app:srcCompat="@drawable/gopher_logo" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
     <ScrollView
@@ -58,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
                 android:paddingVertical="64dp"
-                android:text="@string/log_in_success"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="144dp"
-                android:contentDescription="@string/verify_check"
+                android:contentDescription=""
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
