--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,40 +69,35 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
                 android:orientation="horizontal"
-                android:weightSum="2"
-                android:layout_marginTop="80dp">
+                android:weightSum="2">
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="32dp"
+                    android:layout_weight="1"
                     android:fontFamily="@font/poppins_bold"
                     android:text="@string/login_role_selection_prompt"
                     android:textColor="@color/black"
-                    android:textStyle="bold"
-                    />
-
-
+                    android:textStyle="bold" />
 
 
                 <RadioGroup
                     android:id="@+id/login_role_radioGroup"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="32dp"
-                    android:checkedButton="@id/caretaker_radioButton"
-                    >
+                    android:layout_weight="1"
+                    android:checkedButton="@id/caretaker_radioButton">
 
                     <RadioButton
                         android:id="@+id/caretaker_radioButton"
@@ -131,52 +126,62 @@
 
             </LinearLayout>
 
-            <EditText
-                android:id="@+id/Email"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:layout_gravity="center_horizontal"
-                android:autofillHints=""
-                android:background="@drawable/edit_text_border"
-                android:ems="10"
-                android:hint="@string/email_hint"
-                android:inputType="textEmailAddress"
-                android:textColor="@android:color/darker_gray"
-                android:textStyle="normal"
-                android:focusable="auto"
-                />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_horizontal_margin"
+                android:layout_gravity="center_horizontal">
 
-            <EditText
-                android:id="@+id/password"
-                style="@style/Widget.AppCompat.EditText"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/Email"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="12dp"
+                    android:autofillHints=""
+                    android:ems="10"
+                    android:focusable="auto"
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress"
+                    android:paddingHorizontal="16dp"
+                    android:textStyle="normal" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="24dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:autofillHints=""
-                android:background="@drawable/edit_text_border"
-                android:ems="10"
-                android:hint="@string/password_hint"
-                android:inputType="textPassword"
-                android:textColor="@android:color/darker_gray"
-                android:focusable="auto"
-                />
+                app:passwordToggleEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                    android:autofillHints=""
+                    android:ems="10"
+                    android:focusable="auto"
+                    android:hint="@string/password"
+                    android:inputType="textPassword"
+                    android:textStyle="normal" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/loginBtn"
                 android:layout_width="200dp"
                 android:layout_height="60dp"
-                android:layout_marginBottom="16dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="16dp"
                 android:backgroundTint="@color/TG_blue"
                 android:fontFamily="@font/poppins_bold"
                 android:text="@string/login_login_button"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                app:cornerRadius="24dp"
-                />
+                app:cornerRadius="24dp" />
 
             <Button
                 android:id="@+id/loginRegisterBtn"
@@ -188,8 +193,7 @@
                 android:text="@string/login_register_btn"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                app:cornerRadius="24dp"
-                />
+                app:cornerRadius="24dp" />
 
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/loginGoogleBtn"
@@ -202,8 +206,7 @@
                 android:text="@string/login_google_btn"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                app:cornerRadius="24dp"
-                />
+                app:cornerRadius="24dp" />
 
             <TextView
                 android:id="@+id/forgotPassword"
@@ -213,8 +216,7 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/login_forgot_password"
                 android:textColor="#0598a5"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
@@ -223,9 +225,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
-                android:visibility="invisible"
-                />
-
+                android:visibility="invisible" />
 
 
         </LinearLayout>
