--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -49,47 +49,9 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/avatar_icon" />
 
-            <Button
-                    android:id="@+id/caretakerDashboardNotificationsButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="68dp"
-                    android:onClick="onNotificationsClick"
-                    android:text="@string/test_notifications"
-                    android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/headerGuardiansLogo"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-            <Button
-                    android:id="@+id/button6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:onClick="onHealthDataClick"
-                    android:text="@string/test_health_data"
-                    android:textSize="10sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.922"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/caretakerDashboardNotificationsButton" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <TextView
-            android:id="@+id/selectAPatientTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="75dp"
-            android:onClick="onSelectAPatientClick"
-            android:text="@string/select_a_patient"
-            android:textColor="#2B86AC"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
-3
     <TextView
         android:id="@+id/monitorPatientTextView"
         android:layout_width="wrap_content"
@@ -102,7 +64,27 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selectAPatientTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onHealthDataClick"
+        android:text="@string/test_health_data"
+        android:textSize="10sp"
+        tools:layout_editor_absoluteX="130dp"
+        tools:layout_editor_absoluteY="471dp" />
+
+    <Button
+        android:id="@+id/caretakerDashboardNotificationsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onNotificationsClick"
+        android:text="@string/test_notifications"
+        android:textSize="10sp"
+        tools:layout_editor_absoluteX="126dp"
+        tools:layout_editor_absoluteY="413dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
