--- a/app/src/main/res/layout/activity_confirm_incident.xml
+++ b/app/src/main/res/layout/activity_confirm_incident.xml
@@ -5,26 +5,26 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="deakin.gopher.guardian.view.general.PatientProfileAddActivity">
+    tools:context="deakin.gopher.guardian.view.caretaker.notifications.confirmincident.ConfirmIncidentActivity">
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textAlignment="center">
 
     <Button
         android:id="@+id/signoutButton2"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="13dp"
+        android:layout_width="136dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="60dp"
         android:backgroundTint="@color/TG_blue"
-        android:text="@string/sign_out"
+        android:onClick="onConfirmIncidentClick"
+        android:text="@string/confirm_button_text"
         android:textColor="@color/white"
         android:textStyle="normal|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.816"
+        app:layout_constraintHorizontal_bias="0.818"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
@@ -134,33 +134,25 @@
         app:layout_constraintStart_toEndOf="@+id/textView30"
         app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
-    <ImageView
-        android:id="@+id/imageView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="93dp"
-        android:contentDescription="TODO"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button8"
-        app:srcCompat="@drawable/rectangle3" />
 
     <ImageView
         android:id="@+id/imageView12"
         android:layout_width="316dp"
-        android:layout_height="356dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/rectangle_drop_shadow"
         android:contentDescription="TODO"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9"
-        app:srcCompat="@drawable/rectangle1689" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <TextView
         android:id="@+id/textView32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:text="@string/confirm_incident_text"
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="@+id/imageView12"
@@ -170,101 +162,88 @@
         android:id="@+id/name3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="48dp"
         android:fontFamily="sans-serif-black"
-        android:text="@string/benjamin_hogan_is_seemingly_unconscious"
+        android:text="@string/zoe_tang_took_a_fall"
         app:layout_constraintStart_toStartOf="@+id/imageView12"
         app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
-    <TextView
-        android:id="@+id/name4"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-black"
-        android:text="@string/confirm_incident_verified_by"
-        app:layout_constraintStart_toStartOf="@+id/imageView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView32" />
-
-    <TextView
-        android:id="@+id/textView40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/vertification_time_12_39_pm"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView12"
-        app:layout_constraintTop_toBottomOf="@+id/name4" />
-
-    <TextView
-        android:id="@+id/textView41"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/gray_border_rectangle"
-        android:paddingLeft="5dp"
-        android:paddingTop="5dp"
-        android:paddingRight="5dp"
-        android:paddingBottom="5dp"
-        android:text="@string/patient_is_unconscious_and_bleeding_from_head"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView40" />
-
-    <ImageView
-        android:id="@+id/imageView24"
-        android:layout_width="351dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="10dp"
-        android:contentDescription="TODO"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/rectangle_drop_shadow"
+        android:paddingLeft="40dp"
+        android:paddingTop="20dp"
+        android:paddingRight="40dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView12"
-        app:srcCompat="@drawable/rectangle1692" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView12">
 
-    <TextView
-        android:id="@+id/careTakerName4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/estimated_time_30_minutes"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.129"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteY="134dp">
 
-    <ImageView
-        android:id="@+id/imageView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:contentDescription="TODO"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView12"
-        app:srcCompat="@drawable/rectangle1695" />
+            <TextView
+                android:id="@+id/do_you_confirm_the_fall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/do_you_confirm_the_fall"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
+            <RadioButton
+                android:id="@+id/radioButton11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/yes_false_alert"
+                android:textSize="10sp" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="35dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="12dp"
-        android:background="#E7EAEB"
-        android:contentDescription="TODO"
-        app:layout_constraintStart_toStartOf="@+id/imageView26"
-        app:layout_constraintTop_toTopOf="@+id/imageView24"
-        app:srcCompat="@drawable/checkedcheckbox" />
+            <TextView
+                android:id="@+id/add_a_note"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="2dp"
+                android:fontFamily="sans-serif-black"
+                android:text="@string/add_a_note"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView25"
+                android:layout_width="263dp"
+                android:layout_height="51dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/gray_border_rectangle"
+                android:hint="@string/add_your_input_here"
+                android:padding="10dp"
+                android:textIsSelectable="true"
+                android:textSize="9sp" />
+
+        </RadioGroup>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/button8"
         android:layout_width="136dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="13dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="60dp"
+        android:backgroundTint="@color/TG_blue"
         android:onClick="onConfirmIncidentCancelClick"
         android:text="@string/cancel"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -272,49 +251,6 @@
         app:layout_constraintHorizontal_bias="0.174"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:text="@string/call_ambulance"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageButton"
-        app:layout_constraintTop_toTopOf="@+id/imageView24" />
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="330dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="40dp"
-        android:layout_weight=".28"
-        android:background="@drawable/gray_border_rectangle"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="@+id/imageView24"
-        app:layout_constraintTop_toTopOf="@+id/imageView24">
-
-        <Spinner
-            android:id="@+id/hospitalSpinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:spinnerMode="dropdown" />
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center"
-            android:contentDescription="TODO"
-            android:src="@drawable/spinner_drop" />
-
-    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
