--- a/app/src/main/res/layout/activity_homepage4caretaker.xml
+++ b/app/src/main/res/layout/activity_homepage4caretaker.xml
@@ -15,7 +15,7 @@
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="224dp"
+        android:layout_marginStart="204dp"
         android:layout_marginTop="16dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
@@ -40,7 +40,7 @@
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="16dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
@@ -66,12 +66,12 @@
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="156dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
-        android:paddingTop="20dp"
+        android:paddingTop="25dp"
         android:paddingBottom="16dp"
         android:stateListAnimator="@animator/button_state_list_animator"
         android:text="@string/task_list"
@@ -81,7 +81,6 @@
         app:cornerRadius="16dp"
         app:icon="@drawable/patient_list_icon"
         app:iconGravity="top"
-        app:iconPadding="10dp"
         app:iconSize="42dp"
         app:iconTint="@color/off_white"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +92,7 @@
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="152dp"
+        android:layout_marginStart="132dp"
         android:layout_marginTop="424dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
@@ -119,7 +118,7 @@
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="292dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
@@ -142,37 +141,36 @@
         tools:ignore="RtlSymmetry" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/caretaker_profile"
+        android:id="@+id/monitorButton"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="224dp"
+        android:layout_marginStart="204dp"
         android:layout_marginTop="292dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
         android:paddingStart="20dp"
-        android:paddingTop="20dp"
-        android:paddingBottom="16dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="15dp"
         android:stateListAnimator="@animator/button_state_list_animator"
-        android:text="@string/profile"
+        android:text="@string/monitoring"
         android:textColor="@color/white"
         android:textSize="11sp"
         app:backgroundTint="@color/deep_blue"
         app:cornerRadius="16dp"
-        app:icon="@drawable/profile_user"
+        app:icon="@drawable/baseline_camera_indoor_24"
         app:iconGravity="top"
-        app:iconPadding="10dp"
-        app:iconSize="40dp"
+        app:iconSize="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/caretaker_monitor"
+        android:id="@+id/caretaker_profile"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="224dp"
+        android:layout_marginStart="204dp"
         android:layout_marginTop="156dp"
         android:elevation="20dp"
         android:fontFamily="@font/poppins_bold"
