--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,7 +75,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
-    <!-- Add this: RecyclerView added here -->
+    <!-- RecyclerView for messages -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMessages"
         android:layout_width="0dp"
@@ -86,7 +86,7 @@
         app:layout_constraintBottom_toTopOf="@+id/sendMessageLayout"
         android:scrollbars="vertical" />
 
-    <!-- Add this: Bottom message input layout -->
+    <!-- Bottom message input layout -->
     <RelativeLayout
         android:id="@+id/sendMessageLayout"
         android:layout_width="0dp"
@@ -114,6 +114,18 @@
             android:layout_alignParentEnd="true"
             android:text="Send"/>
     </RelativeLayout>
+
+    <!-- Get Started Button (Added) -->
+    <Button
+        android:id="@+id/getStartedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Started"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true" />
 
     <!-- Existing Header Icon -->
     <ImageView
